# bazel-qt-example

./: MODULE.bazel
labs/lab1/: BUILD.bazel  README.md  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  task2widget.cpp  task2widget.h
labs/lab2/: BUILD.bazel  controller.cpp  controller.h  main.cpp  mainwindow.cpp  mainwindow.h  polygon.cpp  polygon.h  ray.cpp  ray.h  raycaster_widget.cpp  raycaster_widget.h  task.md
labs/lab3/: BUILD.bazel  difficulty_dialog.cpp  difficulty_dialog.h  exercise_data.cpp  exercise_data.h  grammar_widget.cpp  grammar_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  task.md  translation_widget.cpp  translation_widget.h
