load("@rules_qt//:qt.bzl", "qt_cc_binary", "qt_cc_library")

qt_cc_library(
    name = "lab2_lib",
    srcs = [
        "controller.cpp",
        "polygon.cpp",
        "ray.cpp",
        "raycaster_widget.cpp",
        "mainwindow.cpp",
    ],
    hdrs = [
        "controller.h",
        "polygon.h",
        "ray.h",
        "raycaster_widget.h",
        "mainwindow.h",
    ],
    deps = [
        "@rules_qt//:qt_core",
        "@rules_qt//:qt_gui",
        "@rules_qt//:qt_widgets",
    ],
)

qt_cc_binary(
    name = "lab2",
    srcs = ["main.cpp"],
    deps = [
        ":lab2_lib",
        "@rules_qt//:qt_core",
        "@rules_qt//:qt_gui",
        "@rules_qt//:qt_widgets",
    ],
)
