load("@rules_qt//:qt.bzl", "qt_cc_binary", "qt_cc_library")

qt_cc_library(
    name = "lab3_lib",
    srcs = [
        "difficulty_dialog.cpp",
        "exercise_data.cpp",
        "grammar_widget.cpp",
        "mainwindow.cpp",
        "translation_widget.cpp",
    ],
    hdrs = [
        "difficulty_dialog.h",
        "exercise_data.h",
        "grammar_widget.h",
        "mainwindow.h",
        "translation_widget.h",
    ],
    deps = [
        "@rules_qt//:qt_core",
        "@rules_qt//:qt_gui",
        "@rules_qt//:qt_widgets",
    ],
)

qt_cc_binary(
    name = "lab3",
    srcs = ["main.cpp"],
    deps = [
        ":lab3_lib",
        "@rules_qt//:qt_core",
        "@rules_qt//:qt_gui",
        "@rules_qt//:qt_widgets",
    ],
)
